@@ -1,3 +1,5 @@
+* Display either customized clause content or original clause content on option
+
 Version 1.4 - 2015-05-29
 
 Version 1.3 - 2015-01-22
